Webcard周りの修正

--- a/homepage/layouts/shortcodes/webcard.html
+++ b/homepage/layouts/shortcodes/webcard.html
@@ -12,7 +12,8 @@
 <div
     class="web-card hover:cursor-not-allowed h-[120px] bg-white border shadow rounded-lg my-4 sm:my-6 px-0 overflow-hidden">
     <div class="flex">
-        <div class="flex h-[120px] w-[120px] max-w-[230px] bg-gray-300 justify-center items-center text-center">
+        <div
+            class="flex h-[120px] w-[120px] max-w-[230px] bg-gray-300 justify-center items-center text-center dark:bg-warmgray-900">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-8 h-8">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -22,7 +23,8 @@
 
         <div class="flex flex-1 flex-col justify-between bg-gray-50 py-2 px-4 sm:py-3 sm:px-5 ">
             <div class="flex flex-1 flex-col gap-y-1">
-                <div class="text-sm sm:text-base font-bold text-gray-800 leading-normal break-words line-clamp-2">
+                <div
+                    class="text-sm sm:text-base font-bold text-gray-800 leading-normal break-words line-clamp-2 dark:text-white">
                     {{ $u.Host | truncate 30 }} にアクセスできません
                 </div>
             </div>
@@ -31,7 +33,7 @@
                 <div class="flex flex-row items-center">
                     <img src="https://www.google.com/s2/favicons?sz=14&amp;domain_url={{ $u.Scheme }}://{{ $u.Host }}"
                         class="fav-icon mr-1" alt="{{ $u.Host }} favicon image">
-                    <span class="text-xs sm:text-sm text-gray-600">{{ $u.Host | truncate 30 }}</span>
+                    <span class="text-xs sm:text-sm text-gray-600 dark:text-white">{{ $u.Host | truncate 30 }}</span>
                 </div>
             </div>
         </div>
@@ -72,10 +74,10 @@
 
                         <!-- 変数をshortcodeのHTMLに埋め込み -->
                         <div
-                            class="web-card group h-[120px] bg-white border shadow rounded-lg my-4 sm:my-6 px-0 overflow-hidden">
+                            class="web-card group h-[130px] bg-white border shadow rounded-lg my-4 sm:my-6 px-0 overflow-hidden dark:bg-warmgray-900">
                             <a href="{{ $url }}" class="flex group-hover:no-underline">
 
-                                <div class="h-[120px] w-[120px] sm:w-auto max-w-[230px]">
+                                <div class="h-[130px] w-[120px] sm:w-auto max-w-[230px]">
                                     <!-- og:image が取得できた場合 -->
                                     {{ with $image }}
                                     <img src="{{ htmlUnescape $image }}" alt="{{ $description }}"
@@ -83,7 +85,7 @@
                                     <!-- og:image が取得できなかった場合 -->
                                     {{ else }}
                                     <div
-                                        class="flex h-[120px] w-[120px] max-w-[230px] bg-gray-300 justify-center items-center text-center">
+                                        class="flex h-[130px] w-[120px] max-w-[230px] bg-gray-300 justify-center items-center text-center">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="1.5" stroke="currentColor" class="h-8 w-8">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -97,7 +99,7 @@
                                     class="flex flex-1 flex-col justify-between py-2 px-4 sm:py-3 sm:px-5 transition ease-in-out duration-100 group-hover:bg-primary-color-50">
                                     <div class="flex flex-1 flex-col gap-y-1">
                                         <div
-                                            class="text-sm sm:text-base font-bold text-gray-800 leading-normal break-words line-clamp-2">
+                                            class="text-sm sm:text-base font-bold text-gray-800 leading-normal break-words line-clamp-2 dark:text-white">
                                             <!-- og:title が取得できた場合 -->
                                             {{ with $title }}
                                             {{ $title }}
@@ -106,16 +108,17 @@
                                             {{ $u.Host | truncate 30 }}
                                             {{ end }}
                                         </div>
-                                        <div class="text-xs sm:text-sm text-gray-600 line-clamp-2">
+                                        <div class="text-xs sm:text-sm text-gray-600 line-clamp-2 dark:text-gray-400">
                                             {{ $description | truncate 100 }}
                                         </div>
                                     </div>
 
-                                    <div class="flex flex-1 flex-col justify-end">
+                                    <div class="flex flex-1 flex-col justify-end h-10">
                                         <div class="flex flex-row items-center">
                                             <img src="https://www.google.com/s2/favicons?sz=14&amp;domain_url={{ $u.Scheme }}://{{ $u.Host }}"
-                                                class="fav-icon mr-1" alt="{{ $u.Host }} favicon image">
-                                            <span class="text-xs sm:text-sm text-gray-600">{{ $u.Host | truncate 30
+                                                class="fav-icon mr-1 override-margin" alt="{{ $u.Host }} favicon image">
+                                            <span class="text-xs sm:text-sm text-gray-600 dark:text-white">{{ $u.Host |
+                                                truncate 30
                                                 }}</span>
                                         </div>
                                     </div>
