--- a/homepage/layouts/_default/works.html
+++ b/homepage/layouts/_default/works.html
@@ -29,7 +29,7 @@
                                 const container = document.getElementById('grid');
                                 data.works.forEach(work => {
                                     const workEl = document.createElement('div');
-                                    workEl.className = 'bg-white rounded-xl shadow-md overflow-hidden cursor-pointer hover:shadow-lg hover:bg-gray-350 transition duration-300'
+                                    workEl.className = 'bg-white dark:bg-warmgray-900 rounded-xl shadow-md overflow-hidden cursor-pointer hover:shadow-lg hover:bg-gray-350 transition duration-300'
                                     workEl.addEventListener('click', () => {
                                         window.open(`https://www.foriio.com/works/${work.id}`, '_blank');
                                     });
@@ -38,8 +38,8 @@
                                                 <img class="w-full h-48 object-cover override-margin" src="${work.thumbnail}" alt="${work.title}">
                                             </div>
                                             <div class="p-4">
-                                                <div class="text-lg font-medium text-gray-800 mb-2">${work.title}</div>
-                                                <p class="text-gray-500 text-sm line-clamp-2">${work.description}</p>
+                                                <div class="text-lg font-medium text-gray-800 mb-2 dark:text-white">${work.title}</div>
+                                                <p class="text-gray-500 text-sm line-clamp-2 dark:text-gray-400">${work.description}</p>
                                             </div>  
                                         `;
                                     container.appendChild(workEl);
