Fix some mistakes

--- a/homepage/layouts/_default/works.html
+++ b/homepage/layouts/_default/works.html
@@ -57,7 +57,7 @@
                                 });
                         </script>
                     </div>
-                    <h2 class="title text-2xl mb-2">Instrumental Songs</h2>
+                    <h2 class="title text-2xl mb-2">Other Songs</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-10 md:px-20" id="grid_2">
                         <script>
                             async function requestForiioWorks(queryParams) {
