--- a/homepage/static/css/custom.css
+++ b/homepage/static/css/custom.css
@@ -6,3 +6,23 @@
     margin-top: 0 !important;
     margin-bottom: 0 !important;
 }
+
+.aspect-ratio-16-9 {
+    position: relative;
+    width: 100%;
+    /* or 画像の幅に応じたパーセンテージやpxを指定 */
+    padding-top: 56.25%;
+    /* 16:9のアスペクト比の場合の高さ(9 / 16 * 100%) */
+}
+
+.aspect-ratio-16-9 img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* コンテナの幅に合わせる */
+    height: 100%;
+    /* コンテナの高さに合わせる */
+    object-fit: cover;
+    /* 画像のアスペクト比を保ちつつ、コンテナを完全に埋める */
+}
