--- a/homepage/layouts/partials/seo/print.html
+++ b/homepage/layouts/partials/seo/print.html
@@ -10,31 +10,31 @@
 {{- $.Scratch.SetInMap "seo" "updated_time" (.Lastmod.Format "2006-01-02T15:04:05-07:00") -}}
 {{- end -}}
 
- 
+
 {{/* 説明 */}}
 {{ $description := "" }}
 {{/* 1. SEO Description */}}
 {{- if .Params.seo.description -}}
-	{{- $description = .Params.seo.description -}}
+{{- $description = .Params.seo.description -}}
 {{/* 2. Description
-	    As it could potentially contain HTML tags, we strip them with plainify */}}
+As it could potentially contain HTML tags, we strip them with plainify */}}
 {{- else if .Params.description -}}
-	{{- $description = .Params.description | plainify -}}
-{{/* 3. Summary  */}}
+{{- $description = .Params.description | plainify -}}
+{{/* 3. Summary */}}
 {{- else if .Summary -}}
-	{{- $description = .Summary -}}
+{{- $description = .Summary -}}
 {{- else -}}
-{{/* 4. site description  */}}
-	{{ $description = .Site.Params.Description }}
+{{/* 4. site description */}}
+{{ $description = .Site.Params.Description }}
 {{- end -}}
 
 {{- $.Scratch.SetInMap "seo" "description" $description -}}
 
 {{/* サイト名 */}}
 {{- with .Param "seo.site_name" -}}
-	{{- $.Scratch.SetInMap "seo" "site_name" . -}}
+{{- $.Scratch.SetInMap "seo" "site_name" . -}}
 {{- else -}}
-	{{- $.Scratch.SetInMap "seo" "site_name" .Site.Title -}}
+{{- $.Scratch.SetInMap "seo" "site_name" .Site.Title -}}
 {{- end -}}
 
 {{/* Twitter */}}
@@ -43,16 +43,16 @@
 
 {{/* We check the site config sports a Social.twitter and use as handle */}}
 {{- with .Site.Social.twitter -}}
-	{{- $.Scratch.SetInMap "seo" "twitter_handle" (printf "@%s" .) -}}
+{{- $.Scratch.SetInMap "seo" "twitter_handle" (printf "@%s" .) -}}
 {{- end -}}
 
 {{/* 種類 */}}
 {{- $.Scratch.SetInMap "seo" "type" "website" -}}
 
 {{- if in (slice "blog" "news") .Type -}}
-	{{- $.Scratch.SetInMap "seo" "type" "article" -}}
+{{- $.Scratch.SetInMap "seo" "type" "article" -}}
 {{ else if in (slice "article") .Type }}
-	{{- $.Scratch.SetInMap "seo" "type" "event" -}}
+{{- $.Scratch.SetInMap "seo" "type" "event" -}}
 {{- end -}}
 
 {{/* 言語 */}}
@@ -60,7 +60,7 @@
 
 {{/* Canonical */}}
 {{ with .Params.seo.canonical }}
-  {{- $.Scratch.SetInMap "seo" "canonical" (. | absURL) -}}
+{{- $.Scratch.SetInMap "seo" "canonical" (. | absURL) -}}
 {{ else }}
 {{- $.Scratch.SetInMap "seo" "canonical" .Permalink -}}
 {{ end }}
@@ -69,18 +69,18 @@
 
 {{ partial "seo/tags" (dict "page" $ "seo" ($.Scratch.Get "seo")) }}
 {{ with .Site.Params.seo.jsonld }}
-	{{ partial "seo/jsonld" (dict "page" $ "seo" ($.Scratch.Get "seo")) }}
+{{ partial "seo/jsonld" (dict "page" $ "seo" ($.Scratch.Get "seo")) }}
 {{ end }}
 
 {{ with .Site.Params.seo.debug }}
-	{{ partial "seo/debug" $ }}
+{{ partial "seo/debug" $ }}
 {{ end }}
 
 {{ if .Params.image }}
-    {{ with .Params.image }}
-<meta property="og:image" content="{{ . | absURL }}">
-<meta property="og:image:url" content="{{ . | absURL }}">
-    {{ end }}
+{{ with .Params.image }}
+<meta property="og:image" content="{{ index . 0 | absURL }}">
+<meta property="og:image:url" content="{{ index . 0 | absURL }}">
+{{ end }}
 {{ else }}
 <meta property="og:image" content="{{ .Site.Params.og_image | absURL }}">
 <meta property="og:image:url" content="{{ .Site.Params.og_image | absURL }}">
