--- a/homepage/layouts/partials/widgets/social.html
+++ b/homepage/layouts/partials/widgets/social.html
@@ -3,7 +3,7 @@
 </header>
 <div class="bg-white panel mb-3 pb-5 dark:bg-warmgray-900">
     <p class="text-xl text-center text-gray-700 py-3 px-3 dark:text-gray-300 font-bold">Links</p>
-    <div class="flex justify-center flex-wrap mt-4 space-x-4">
+    <div class="flex justify-center flex-wrap mt-4 mx-1.5 space-x-4">
         <!-- Twitter -->
         <a href="https://twitter.com/Mass_DTM" target="_blank"
             class="text-slate-950 hover:text-slate-600 dark:text-gray-400 dark:hover:text-gray-300">
@@ -52,6 +52,13 @@
             class="text-gray-800 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-300">
             <i class="fab fa-github fa-2x"></i>
             <span class="sr-only">GitHub</span>
+        </a>
+
+        <!-- Spotify-->
+        <a href="https://github.com/Mass-ms" target="_blank"
+            class="text-gray-800 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-300">
+            <i class="fab fa-spotify fa-2x"></i>
+            <span class="sr-only">Spotify</span>
         </a>
     </div>
     <script>
